Fix whitespace issues, clean up styles

--- a/bagitobjecttransfer/recordtransfer/static/recordtransfer/css/base/navbar.css
+++ b/bagitobjecttransfer/recordtransfer/static/recordtransfer/css/base/navbar.css
@@ -1,3 +1,5 @@
+/* Mobile-first styles for navbar */
+
 header {
     background-color: rgb(137, 34, 26);
     width: 100%;
@@ -21,6 +23,12 @@ header.homepage {
     position: relative;
 }
 
+.nav-logo {
+    order: 0;
+    flex-grow: 0;
+}
+
+/* Greyed-out overlay applied when mobile menu is open */
 .menu-overlay {
     position: fixed;
     top: 0;
@@ -33,12 +41,12 @@ header.homepage {
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
     z-index: 999;
 }
-
 .menu-overlay.show {
     visibility: visible;
     opacity: 1;
 }
 
+/* Site title */
 .nav-title {
     margin-left: 20px;
     flex-grow: 1;
@@ -47,21 +55,63 @@ header.homepage {
     text-align: left;
 }
 
-.nav-link {
-    text-decoration: none;
-    color: white;
-    line-height: 40px;
+/* Sliding menu styles */
+.nav-items-container {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 5vh;
+    right: -350px;
+    height: 90vh;
+    max-height: 100vh;
+    width: 300px;
+    background: #fff;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.1);
+    padding: 50px 20px;
+    z-index: 1000;
+    visibility: hidden;
+    box-sizing: border-box;
+    border-radius: 3px;
+}
+.nav-items-container.open {
+    right: 0;
+    visibility: visible;
 }
 
-.nav-link:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 4px;
-    text-underline-offset: 12px;
-}
-
-.nav-logo {
-    order: 0;
+/* Container for each nav item */
+.nav-item {
     flex-grow: 0;
+    width: 100%;
+    margin-bottom: 20px;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: rgb(137, 34, 26);
+}
+
+/* Container for login/logout button */
+.nav-item-button {
+    margin-top: auto;
+    margin-bottom: 0px;
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: rgb(137, 34, 26);
+}
+
+/* Adds flex display to nav items */
+.nav-item-flex {
+    display: flex;
+    align-items: center;
+}
+
+.nav-link,
+.nav-link-icon {
+    flex-grow: 1;
+    text-decoration: none;
+    line-height: 40px;
+    color: inherit;
 }
 
 .nav-toggle-open {
@@ -72,78 +122,36 @@ header.homepage {
     font-size: 20pt;
 }
 
+/* Burger icon */
 .nav-toggle-icon {
     padding: 4px 8px;
+    color: white;
 }
-
 .nav-toggle-icon:hover {
     background-color: #92929291;
     border-radius: 4px;
 }
 
-/* Sliding menu styles */
-.nav-items-container {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    top: 0;
-    right: -350px;
-    height: 100vh;
-    max-height: 100vh;
-    width: 300px;
-    background: #fff;
-    box-shadow: -2px 0 5px rgba(0,0,0,0.1);
-    padding: 60px 20px;
-    z-index: 1000;
-    visibility: hidden;
-    box-sizing: border-box;
-}
-
-.nav-items-container.open {
-    right: 0;
-    visibility: visible;
-}
-
-.nav-items-container .nav-link {
-    color: rgb(137, 34, 26);
-}
-
-.nav-item {
-    flex-grow: 0;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
+/* Login/logout button */
 .nav-button {
     border: 3px solid rgb(137, 34, 26);
     border-radius: 3rem;
-    padding: 0.5rem 1.5rem;
-    color: #ffffff;
     text-decoration: none !important;
 }
-
 .nav-button:hover {
     background-color: rgb(137, 34, 26);
     color: #ffffff;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.nav-toggle-close {
-    margin-top: auto;
-    margin-bottom: 0px;
-    width: 100%;
-    text-align: center;
-}
-
-#app-logo {
-    height: 70px;
-}
-
 /* Mobile-only transitions */
 @media all and (max-width: 799px) {
     .nav-items-container {
         transition: right 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    }
+
+    .nav-item:hover {
+        background-color: #f2f2f2;
     }
 }
 
@@ -154,19 +162,7 @@ header.homepage {
         flex-wrap: nowrap;
         background: none;
     }
-    .nav-item {
-        order: 1;
-        margin-bottom: 0;
-        margin-top: 0;
-        margin-left: 20px;
-        position: relative;
-        display: block;
-        width: auto;
-    }
-    .nav-toggle-open,
-    .nav-toggle-close {
-        display: none;
-    }
+
     .nav-items-container {
         position: static;
         flex-direction: row;
@@ -180,16 +176,45 @@ header.homepage {
         visibility: visible;
         transition: none;
     }
-    .nav-items-container .nav-link {
+
+    .nav-item,
+    .nav-item-button {
+        margin-bottom: 0;
+        margin-top: 0;
+        margin-left: 20px;
+        position: relative;
+        display: block;
+        width: auto;
+    }
+
+    /* Hide the burger menu in desktop mode */
+    .nav-toggle-open {
+        display: none;
+    }
+
+    .nav-link {
         color: white;
     }
+
+    .nav-link:hover {
+        text-decoration: underline;
+        text-decoration-thickness: 4px;
+        text-underline-offset: 12px;
+    }
+
+    /* Hide the navigation icons in desktop mode */
+    .nav-link-icon {
+        display: none;
+    }
+
     .nav-button {
         border: 3px solid rgba(255, 255, 255, 0.7);
         border-radius: 3rem;
-        padding: 0.5rem 1.5rem;
+        padding: 0.1rem 0.8rem;
         color: #ffffff;
         text-decoration: none;
     }
+
     .nav-button:hover {
         background-color: #ffffff;
         color: #ee7421;
